--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,73 @@
-/* 
 
-    You can write your own styles here...
+  body {
+    background:rgb(173, 220, 251); 
+    color: rgb(37, 38, 39);
+    padding: 4%;
     
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+  }
 
-*/
+  .container{
+    width: 60vh;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .form {
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+  }
+  
+  
+  .new-item-form input {
+    border: 1px solid rgb(114, 192, 248);
+    background: rgb(58, 130, 207);
+    color: whitesmoke;
+  }
+  
+  .header {
+    
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+  }
+  
+  .list {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  
+  .list li {
+    display: flex;
+    justify-content: space-between;
+    width: 32vh;
+    height: 5vh;
+    align-items: center;
+    border-bottom: 1px solid rgba(89, 90, 91, 0.2);
+  }
+  
+  .list li label {
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+    align-items: center;
+  }
+  
+  .btn.btn-danger{
+    display: none;
+  }
+
+  .list li:hover > .btn.btn-danger{
+    display: block;
+  }
+
+
+
+
+
+  
+  
